--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@types/react-slick": "^0.23.13",
     "antd": "^5.14.0",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -37,6 +38,7 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "sass": "^1.75.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.2.1",
